# security-attacks-fp

./: README.md
gazebo-simulations/: README.md
gazebo-simulations/collision-simulation/src/: myCollisionModelPlugin.cpp  myCollisionSensorPlugin.cpp
gazebo_plugins/: CMakeLists.txt  empty_model_plugin.cpp  empty_sensor_plugin.cpp
omnetpp_ws/: README.txt
omnetpp_ws/inet-ext/: .cproject  .gitignore  .oppbuildspec  .project
omnetpp_ws/inet-ext/simulations/: .gitignore  Network.ned  omnetpp.ini  package.ned  run
omnetpp_ws/inet-ext/src/: .gitignore  CanHost.ned  Makefile  MsgType.cc  Trojaner.ned  inet-ext_dbg  package.ned
omnetpp_ws/inet-ext/src/applications/: AppInterface.ned  BurstApp.cc  BurstApp.ned  DOS.cc  DOS.ned  DataManipulationApp.cc  DataManipulationApp.ned  NoApp.cc  NoApp.ned  RegularApp.cc  RegularApp.ned  RosApp.cc  RosApp.ned  RosApp2.cc  RosApp2.ned
omnetpp_ws/inet-ext/src/linklayer/: CanController.cc  CanController.ned  CanInterface.cc  CanInterface.ned
omnetpp_ws/inet-ext/src/physicallayer/: Can.h  CanBus.cc  CanBus.ned  CanTransciever.cc  CanTransciever.ned
omnetpp_ws/inet-ext/src/ros/: RosInterface.cc  RosInterface.h  RosInterface.ned
omnetpp_ws/inet/src/inet/can/: RosMsg.msg
omnetpp_ws/omnet_collision/simulations/: Network.ned  package.ned  run
omnetpp_ws/omnet_collision/src/applications/: AttackerApp.cc  AttackerApp.ned  RosApp.ned
omnetpp_ws/omnet_collision/src/physicallayer/: CanBus.cc  CanBus.ned  CanTransciever.ned
omnetpp_ws/omnet_collision/src/ros/: RosInterface.cc  RosInterface.h  RosInterface.ned
security-attacks-fp-master/security_attacks_fp_ws/src/collision-simulation/: CMakeLists.txt
security-attacks-fp-master/security_attacks_fp_ws/src/collision-simulation/worlds/: collision_world.world
security_attacks_fp_ws/launch/: collision_world.launch  postbox_world.launch
security_attacks_fp_ws/src/collision-simulation/: CMakeLists.txt
security_attacks_fp_ws/src/collision-simulation/src/: AttackerApp.cpp  carPlugin.cpp  myCollisionModelPlugin.cpp  myCollisionSensorPlugin.cpp  myMotorPlugin.cpp  myRecieverPlugin.cpp  postbox1Plugin.cpp  postbox2Plugin.cpp
security_attacks_fp_ws/src/collision-simulation/worlds/: collision_world.world  postbox.world
security_attacks_fp_ws/src/simulation/: CMakeLists.txt  package.xml
security_attacks_fp_ws/src/simulation/src/: carPlugin.cpp  postbox1Plugin.cpp  postbox2Plugin.cpp
security_attacks_fp_ws/src/simulation/worlds/: collision_world.world
security_attacks_fp_ws/worlds/: collision_world.world
